# Flask-RestFul

./: .env-sample  .gitignore  Makefile  README.MD  alembic.ini  pyproject.toml  routes.http  ruff.toml  settings-sample.toml
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 5c9927757eb7_teste.py  e9390ac89eae_create_todos_table.py
app/: startup.py
app/common/: api.py  base_model.py  swagger.py  utils.py
app/config/: base.py  config.py  logger.py  settings.py  table_registry.py
app/database/: migrate.py  session.py
app/model/: __init__.py  todo.py
app/models/: __init__.py  todo.py
app/resources/: todo.py  todo_router.py
app/swagger/: todo_model.py
migrations/: env.py
migrations/versions/: 5cecf2d42799_initial_migration.py  dc0138c59066_bigbang.py
src/: playground.py
tests/: conftest.py  test_database.py  test_routes.py
tests/factory/: todo_factory.py
